[package]
name = "praborrow-lease"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Lease consensus logic (Raft/Paxos). Manages distributed agreement on Sovereign lease validity."

[dependencies]
praborrow-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, optional = true }
thiserror = { workspace = true }
sled = { workspace = true }
bincode = { workspace = true }

[features]
default = ["std"]
std = ["tokio"]
net = ["std"]
tokio = ["dep:tokio"]

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
