[package]
name = "praborrow-lease"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Lease consensus logic (Raft/Paxos). Manages distributed agreement on Sovereign lease validity."

[dependencies]
praborrow-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, optional = true }
thiserror = { workspace = true }
sled = { workspace = true }
bincode = { workspace = true }
crc32fast = "1.5"
rand = { workspace = true }

# gRPC (optional)
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }

# TLS (optional)
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }

# Observability (optional)
prometheus = { workspace = true, optional = true }
config = "0.14"
bytes = { version = "1.5", features = ["serde"] }
petgraph = "0.6"

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }

[build-dependencies]
tonic-build = { version = "0.13", optional = true }
protoc-bin-vendored = { version = "3.0", optional = true }

[features]
default = ["std"]
std = ["tokio"]
net = ["std"]
tokio = ["dep:tokio"]
grpc = ["std", "tonic", "prost", "tonic-build", "protoc-bin-vendored"]
tls = ["grpc", "rustls", "tokio-rustls"]
observability = ["prometheus"]
full = ["grpc", "tls", "observability"]
